Fix wrapping when using TomSelect multi selection

--- a/kvision-assets/src/css/style.css
+++ b/kvision-assets/src/css/style.css
@@ -716,7 +716,7 @@ label.required-label + ons-input > span.text-input__label::after {
     margin-left: 5px;
 }
 
-.ts-control {
+.ts-wrapper:not(.multi) .ts-control {
     flex-wrap: nowrap;
 }
 
